--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "express": "^4.0.0",
-    "mongodb": "^1.4.0"
+    "mongodb": "^1.4.0",
+    "winston": "^0.7.3",
+    "mocha": "^1.18.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "^0.4.4",
+    "grunt-contrib-uglify": "^0.4.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "repository": {
